<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>dev.jshfx</groupId>
	<artifactId>dev.jshfx.parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>dev.jshfx.base</module>
		<module>dev.jshfx.fonts</module>
		<module>dev.jshfx.util</module>
		<module>dev.jshfx.automatic</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8
		</project.reporting.outputEncoding>
		<ojfxVersion>17.0.1</ojfxVersion>
		<picocliVersion>4.6.1</picocliVersion>
		<mavenVersion>3.8.3</mavenVersion>
		<mavenResolverVersion>1.7.2</mavenResolverVersion>
		<slf4jVersion>1.7.32</slf4jVersion>
		<javafx.platform>win</javafx.platform>
		<sysName>jshfx</sysName>
		<distName>${sysName}-${project.version}</distName>
		<homeDir>.${sysName}/${project.version}</homeDir>
		<logDir>log</logDir>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>dev.jshfx</groupId>
				<artifactId>dev.jshfx.fonts</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>dev.jshfx</groupId>
				<artifactId>dev.jshfx.automatic</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>dev.jshfx</groupId>
				<artifactId>dev.jshfx.util</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>dev.jshfx</groupId>
				<artifactId>dev.jshfx.base</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-base</artifactId>
				<version>${ojfxVersion}</version>
				<classifier>${javafx.platform}</classifier>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-controls</artifactId>
				<version>${ojfxVersion}</version>
				<classifier>${javafx.platform}</classifier>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-graphics</artifactId>
				<version>${ojfxVersion}</version>
				<classifier>${javafx.platform}</classifier>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-web</artifactId>
				<version>${ojfxVersion}</version>
				<classifier>${javafx.platform}</classifier>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-swing</artifactId>
				<version>${ojfxVersion}</version>
				<classifier>${javafx.platform}</classifier>
			</dependency>
			<dependency>
				<groupId>org.controlsfx</groupId>
				<artifactId>controlsfx</artifactId>
				<version>12.0.0-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>org.fxmisc.richtext</groupId>
				<artifactId>richtextfx</artifactId>
				<version>1.0.0-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>org.fxmisc.flowless</groupId>
				<artifactId>flowless</artifactId>
				<version>0.6.5-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse</groupId>
				<artifactId>yasson</artifactId>
				<version>2.0.0-M2</version>
			</dependency>
			<dependency>
				<groupId>info.picocli</groupId>
				<artifactId>picocli</artifactId>
				<version>${picocliVersion}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven.resolver</groupId>
				<artifactId>maven-resolver-api</artifactId>
				<version>${mavenResolverVersion}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven.resolver</groupId>
				<artifactId>maven-resolver-spi</artifactId>
				<version>${mavenResolverVersion}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven.resolver</groupId>
				<artifactId>maven-resolver-util</artifactId>
				<version>${mavenResolverVersion}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven.resolver</groupId>
				<artifactId>maven-resolver-impl</artifactId>
				<version>${mavenResolverVersion}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven.resolver</groupId>
				<artifactId>maven-resolver-connector-basic</artifactId>
				<version>${mavenResolverVersion}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven.resolver</groupId>
				<artifactId>maven-resolver-transport-file</artifactId>
				<version>${mavenResolverVersion}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven.resolver</groupId>
				<artifactId>maven-resolver-transport-http</artifactId>
				<version>${mavenResolverVersion}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-resolver-provider</artifactId>
				<version>${mavenVersion}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-model-builder</artifactId>
				<version>${mavenVersion}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4jVersion}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-simple</artifactId>
				<version>${slf4jVersion}</version>
			</dependency>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>5.8.1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>5.8.1</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.vintage</groupId>
				<artifactId>junit-vintage-engine</artifactId>
				<version>5.8.1</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
					<configuration>
						<release>17</release>
						<compilerArgs>
							<compilerArg>--enable-preview</compilerArg>
						</compilerArgs>
						<annotationProcessorPaths>
							<path>
								<groupId>info.picocli</groupId>
								<artifactId>picocli-codegen</artifactId>
								<version>${picocliVersion}</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M5</version>
					<configuration>
						<argLine>--enable-preview</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.2.0</version>
					<configuration>
						<finalName>${project.artifactId}</finalName>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.2.0</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>templating-maven-plugin</artifactId>
					<version>1.0.0</version>
					<executions>
						<execution>
							<id>filter-src</id>
							<goals>
								<goal>filter-sources</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<artifactId>maven-jlink-plugin</artifactId>
					<version>3.1.0</version>
					<extensions>true</extensions>
					<configuration>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>linux</id>
			<modules>
				<module>dev.jshfx.base</module>
				<module>dev.jshfx.fonts</module>
				<module>dev.jshfx.util</module>
				<module>dev.jshfx.automatic</module>
				<module>dev.jshfx.image</module>
				<module>dev.jshfx.distribution</module>
			</modules>
			<properties>
				<javafx.platform>linux</javafx.platform>
				<sourceJdkModules>${env.JAVA_HOME_LINUX}</sourceJdkModules>
				<scriptExtension>sh</scriptExtension>
				<pathSeparator>:</pathSeparator>
				<osHomeDir>~</osHomeDir>
				<distFormat>tgz</distFormat>
			</properties>
		</profile>
		<profile>
			<id>mac</id>
			<activation>
				<os>
					<name>mac os x</name>
				</os>
			</activation>
			<properties>
				<javafx.platform>mac</javafx.platform>
			</properties>
		</profile>
		<profile>
			<id>win</id>
			<modules>
				<module>dev.jshfx.base</module>
				<module>dev.jshfx.fonts</module>
				<module>dev.jshfx.util</module>
				<module>dev.jshfx.automatic</module>
				<module>dev.jshfx.image</module>
				<module>dev.jshfx.distribution</module>
			</modules>
			<properties>
				<javafx.platform>win</javafx.platform>
				<sourceJdkModules>${java.home}</sourceJdkModules>
				<scriptExtension>bat</scriptExtension>
				<pathSeparator>;</pathSeparator>
				<osHomeDir>"%HOME%"</osHomeDir>
				<distFormat>zip</distFormat>
			</properties>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>sonatype.snapshots</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

</project>